--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@react-native-firebase/app": "^8.0.0",
+    "@react-native-firebase/firestore": "^7.2.3",
     "react": "16.11.0",
     "react-native": "0.62.2"
   },
